@@ -1563,6 +1563,8 @@ static void menu_clear_selections(nhmenu *menu)
 static boolean get_menu_coloring(char *str, int *color, int *attr)
 {
     struct menucoloring *tmpmc;
+    boolean foundcolor = FALSE, foundattr = FALSE;
+
     if (iflags.use_menu_color && iflags.use_color)
 	for (tmpmc = menu_colorings; tmpmc; tmpmc = tmpmc->next)
 # ifdef MENU_COLOR_REGEX
@@ -1575,11 +1577,19 @@ static boolean get_menu_coloring(char *str, int *color, int *attr)
 # else
 	    if (pmatch(tmpmc->match, str)) {
 # endif
-		*color = tmpmc->color;
-		*attr = curses_convert_attr(tmpmc->attr);
-		return TRUE;
+		if (!foundcolor && tmpmc->color != CLR_UNDEFINED) {
+		    *color = tmpmc->color;
+		    foundcolor = TRUE;
+		}
+		if (!foundattr && tmpmc->attr != ATR_UNDEFINED) {
+		    *attr = curses_convert_attr(tmpmc->attr);
+		    foundattr = TRUE;
+		}
+		if (foundcolor && foundattr) return TRUE;
 	    }
-    return FALSE;
+    if (foundcolor && !foundattr) *attr = curses_convert_attr(ATR_NONE);
+    if (foundattr && !foundcolor) *color = NO_COLOR;
+    return foundcolor || foundattr;
 }
 #endif /* MENU_COLOR */
 
